--- a/WebContent/resources/css/style.css
+++ b/WebContent/resources/css/style.css
@@ -1,1 +1,34 @@
-<!!-- Pene -->
+.ui-selectonemenu{
+     width: 100% !important;
+}
+.ui-selectonemenu-label{
+     width: 100% !important;
+} 
+.choices{
+	margin-bottom:5px;
+	margin-right: 5px;
+}
+
+.ui-widget-content tr, .ui-widget-content td{
+    border: none !important;
+}
+
+.ui-widget-content .ui-datalist-content{
+border: none;
+background: transparent;
+background-image: none;
+}
+
+.datalist-nospace .ui-widget-content .ui-datalist-data{
+	margin:0;
+}
+
+.datalist-nospace .ui-widget-content .ui-datalist-data .ui-datalist-item{
+	margin-bottom:5px;
+}
+
+.ui-widget-content a:-webkit-any-link{
+	text-decoration: none;
+	border: 0 dashed;
+	border-bottom-width: 1px;
+}
