- Changed name of "listStudentMB" to "StudentListMB" to respect the overall way of writting - Lot of graphical changes - Fixed the filter pb (except all filter of exam which is not really necessary i think) - fixed upcoming/previous display of exams in both index - Exams displayed now depend of the person connected (teacher/student) and if he is related to it - Added table linking Students to an exam - Modified Exam table in DB, adding eIsCorrected (TINYINT(1)) field to know if an exam is corrected or not

--- a/WebContent/resources/css/style.css
+++ b/WebContent/resources/css/style.css
@@ -9,9 +9,6 @@ body{
 	border:0;
 }
 
-#datalistQuestion dt.ui-datalist-item{
-	margin-bottom:20px;
-}
 
 .ui-toolbar {
 	background: white;
@@ -59,9 +56,18 @@ body{
 	margin-left:5px;
 }
 
-#datalistQuestion .ui-datalist-header {
+#datalistQuestion .ui-datalist-header{
 	visibility:hidden;
 }
+
+#datalistQuestion dt.ui-datalist-item{
+	margin-bottom:20px;
+}
+
+.ui-datatable.datatableHidden div.ui-datatable-header{
+	visibility: hidden;
+}
+
 
 .toolbarGroupCenter{
 	text-align:center;
@@ -78,3 +84,10 @@ body{
 .ui-icon.ui-icon-pencil{
 	background-image: url("../resources/img/ui-icons_0077cc_256x240.png");
 }  
+
+.gridWithoutBorder tr.ui-widget-content.ui-panelgrid-even{
+	border:0;
+}
+.gridWithoutBorder h2{
+	margin:0;
+}
