--- a/WebContent/resources/css/stylesheet.css
+++ b/WebContent/resources/css/stylesheet.css
@@ -25,7 +25,7 @@ BODY STYLING
 }
 
 body {
-	background: url(resources/images/bg.png) repeat;
+	background: url(../img/bg.png) repeat;
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 	font-weight:300;
 	text-align: left;
@@ -53,7 +53,7 @@ body {
 	margin-left: -300px;
 	margin-top: -300px;
 	
-	background: url(resources/images/gradient.png) no-repeat;
+	background: url(../img/gradient.png) no-repeat;
 }
 */
 
@@ -68,7 +68,7 @@ body {
 	margin-top: -300px;
 	
 	/* Fallback */ 
-	background-image: url(resources/images/gradient.png); 
+	background-image: url(../img/gradient.png); 
 	background-repeat: no-repeat; 
 	
 	/* CSS3 Gradient */
@@ -187,12 +187,12 @@ CONTENT
 
 .user-icon {
 	top:147px; /* Positioning fix for slide-in, got lazy to think up of simpler method. */
-	background: rgba(65,72,72,0.75) url(resources/images/user-icon.png) no-repeat center;	
+	background: rgba(65,72,72,0.75) url(../img/user-icon.png) no-repeat center;	
 }
 
 .pass-icon {
 	top:221px;
-	background: rgba(65,72,72,0.75) url(resources/images/pass-icon.png) no-repeat center;
+	background: rgba(65,72,72,0.75) url(../img/pass-icon.png) no-repeat center;
 }
 
 /* Animation */
