--- a/WebContent/resources/css/stylesheet.css
+++ b/WebContent/resources/css/stylesheet.css
@@ -196,7 +196,7 @@ CONTENT
 }
 
 /* Animation */
-.input, .user-icon, .pass-icon, .button, .register {
+.input, .user-icon, .pass-icon, .button, .reset {
 	transition: all 0.5s;
 	-moz-transition: all 0.5s;
 	-webkit-transition: all 0.5s;
@@ -209,7 +209,8 @@ FOOTER
 *******************/
 
 .login-form .footer {
-	padding: 25px 30px 40px 30px;
+	padding: 25px 30px 20px 30px;
+	margin: 0 0 20px 0;
 	overflow: auto;
 	
 	background: #d4dedf;
@@ -223,7 +224,7 @@ FOOTER
 /* Login button */
 .login-form .footer .button {
 	float:right;
-	padding: 11px 25px;
+	/*padding: 11px 15px;*/
 	
 	font-family: 'Bree Serif', serif;
 	font-weight: 300;
@@ -261,12 +262,12 @@ FOOTER
 	-webkit-box-shadow: inset 0 1px 6px rgba(256,256,256,0.75);
 }
 
-/* Register button */
-.login-form .footer .register {
+/* reset button */
+.login-form .footer .reset {
 	display: block;
-	float: right;
-	padding: 10px;
-	margin-right: 20px;
+	/*float: right;*/
+	/*padding: 10px;*/
+	margin-right: 10px;
 	
 	background: none;
 	border: none;
@@ -279,11 +280,11 @@ FOOTER
 	text-shadow: 0px 1px 0 rgba(256,256,256,0.5);
 }
 
-.login-form .footer .register:hover {
+.login-form .footer .reset:hover {
 	color: #3f9db8;
 }
 
-.login-form .footer .register:focus {
+.login-form .footer .reset:focus {
 	position: relative;
 	bottom: -1px;
 }
