--- a/WebContent/resources/css/stylesheet.css
+++ b/WebContent/resources/css/stylesheet.css
@@ -97,6 +97,12 @@ LOGIN FORM
 	-moz-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
 	-webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
 }
+.ui-panel.login-form{
+	padding:0;
+}
+.login-form.ui-panel .ui-panel-content{
+	padding:0;
+}
 
 /*******************
 HEADER
@@ -186,12 +192,12 @@ CONTENT
 }
 
 .user-icon {
-	top:147px; /* Positioning fix for slide-in, got lazy to think up of simpler method. */
+	top:158px; /* Positioning fix for slide-in, got lazy to think up of simpler method. */
 	background: rgba(65,72,72,0.75) url(../img/user-icon.png) no-repeat center;	
 }
 
 .pass-icon {
-	top:221px;
+	top:232px;
 	background: rgba(65,72,72,0.75) url(../img/pass-icon.png) no-repeat center;
 }
 
@@ -209,8 +215,10 @@ FOOTER
 *******************/
 
 .login-form .footer {
+	width:240px;
+	height:50px;
 	padding: 25px 30px 20px 30px;
-	margin: 0 0 20px 0;
+	margin: 0;
 	overflow: auto;
 	
 	background: #d4dedf;
@@ -219,12 +227,19 @@ FOOTER
 	box-shadow: inset 0 1px 0 rgba(0,0,0,0.15);
 	-moz-box-shadow: inset 0 1px 0 rgba(0,0,0,0.15);
 	-webkit-box-shadow: inset 0 1px 0 rgba(0,0,0,0.15);
+	
+	border-radius-bottom-left: 5px;
+	-moz-border-radius-bottomleft: 5px;
+	-webkit-border-bottom-left-radius: 5px;
+	border-radius-bottom-right: 5px;
+	-moz-border-radius-bottomright: 5px;
+	-webkit-border-bottom-right-radius: 5px;
 }
 
 /* Login button */
 .login-form .footer .button {
 	float:right;
-	/*padding: 11px 15px;*/
+	padding:4px 10px;
 	
 	font-family: 'Bree Serif', serif;
 	font-weight: 300;
@@ -265,8 +280,7 @@ FOOTER
 /* reset button */
 .login-form .footer .reset {
 	display: block;
-	/*float: right;*/
-	/*padding: 10px;*/
+	padding: 4px 10px;
 	margin-right: 10px;
 	
 	background: none;
@@ -287,4 +301,7 @@ FOOTER
 .login-form .footer .reset:focus {
 	position: relative;
 	bottom: -1px;
+}
+.ui-state-default.reset{
+	box-shadow: none;
 }
